fixed buffering issue using Cache-Control: no-transform. add pre-wrap styling to result div, for better Tweet thread formatting

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -64,4 +64,5 @@
 .main .result {
   font-weight: bold;
   margin-top: 40px;
+  white-space: pre-wrap;
 }
